# make-rs

./: .gitignore  Cargo.toml  Makefile  README.md  make-rs
src/: arguments.rs  error.rs  graph.rs  lib.rs  main.rs
src/parser/: dependency_graph.rs  error.rs  mod.rs
src/rule/: builder.rs  mod.rs  state.rs
