[package]
name = "make-rs"
version = "0.1.0"
edition = "2021"
authors = ["Neil Kaushikkar <neil.kaushikkar@gmail.com>"]
description = "A Rust implementation of the GNU make utility."
repository = "https://github.com/nkaush/make-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
tsq = { git = "https://github.com/nkaush/thread-safe-queue" }
clap = { version = "4", features = ["derive"] }